PHOEBE Project ChangeLog:
----------------------------------------------------------------------------

2006-05-19: - The dereddening function did not properly remove interstellar
              extinction: DC iterations were not fed with de-reddened data
              and thus both the levels and temperature dependence on pass-
              band reddening were wrong. Fixed.
2006-05-17: - Independent fit variable (HJD or phase) in the Fitting tab
              was not properly parsed when opening parameter files, it was
              always set to Times. Many thanks to Petr Harmanec for pointing
              this out!
2006-03-16: - An OB1 error caused the last data point in both LC and RV data
              to be discarded. Fixed.
            - Slightly improved readout of LCO files now avoids problems
              when reading the value of masses/radii of both components.
2006-03-15: - Luminosities added to the LC plotting window upon feature
              request by Kresimir Pavlovski.
2006-02-03: - States of adjustment buttons and step values for spot para-
              meters were not saved and/or read out from .phoebe files.
              Fixed. Many thanks to Carla Maceroni for pointing this out!
2006-02-01: - RV plotting failed when a single RV data curve is defined
              because by default the plot is set for *both* RV curves.
              This is understandable, but the notice message indicated that
              there is a problem with data filename formatting. Fixed.
              Many thanks to Ettore Tamajo for pointing this out!
2006-01-31: - DC fitting quickbar did not mark the 2nd spot latitude and
              longitude due to a missing signal handler. Fixed. Many thanks
              to Carla Maceroni for pointing this out!
            - Further code cleaning done in the Spots section: the marked
              adjustment toggles remained active even if the spot was